# yaah-harness

./: .gitignore  AGENTS.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  ECOSYSTEM.md  GOVERNANCE.md  LICENSE  README.md  pixi.toml  pyproject.toml
.claude/skills/yaah-driving/: SKILL.md
.claude/skills/yaah-extending/: SKILL.md
.claude/skills/yaah-pipeline-authoring/: SKILL.md  pipeline-reference.md  quickstart.md
.claude/skills/yaah-review-my-pr/: SKILL.md
.claude/skills/yaah-reviewing/: SKILL.md
.cursor/rules/: yaah.mdc
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: tests.yml
docs/: README.md  ROADMAP.md  agent-tools.md  archetypes.md  architecture.md  assessment-2026-06-25.md  decision-forms.md  design.md  durable-state.md  envelope-by-example.md  harness-tool-use.md  json-recovery.md  module-catalog.json  module-catalog.md  node-reference.md  quickstart.md  requirements.md  root-config-reference.md  shape-grammar.md  troubleshooting.md  tutorial.md  why-data-not-code.md  why-yaah.md
docs/architecture/agent-loop/: README.md  flow.md  tools-vs-stages.md  use-cases.md
docs/architecture/api-provider/: README.md  flow.md  use-cases.md
docs/case-study/prompt-tuning/: README.md
docs/contributor/: banlist.txt  pre-submission-check.md
docs/cookbook/: README.md  debugging.md  deploy.md  offline-runs.md
docs/cookbook/attachers/: README.md  usage.py
docs/decisions/: 0001-three-concepts.md  0002-decision-forms.md  0003-attacher-port.md  0004-parse-by-default.md  0005-requires-provides-contract.md  0006-node-contract-capability.md  0007-declared-ports.md
examples/: README.md  agent_stage_poc.py  config_pipeline.py
examples/arch-drift/: .gitignore  HOW-IT-FITS-TOGETHER.md  README.md  arch-drift-ab.local.json  arch-drift-ab.real.json  arch-drift-pipeline-ab.json  arch-drift-pipeline.json  arch-drift.dogfood-self.json  arch-drift.dogfood.json  arch-drift.local.json  arch-drift.real.json  transforms.py
examples/arch-drift/fixtures/: input-self.json  input.json
examples/arch-drift/prompts/: extract-haiku.md  extract.md
examples/arch-drift/templates/: report-ab.html  report.html
examples/author/: .gitignore  README.md  author-pipeline.json  author.fake.json  author.local.json  transforms.py
examples/author/fixtures/: draft.fake.json  input.json
examples/author/prompts/: draft.md
examples/coding-agent/: README.md  claude.json  local.json  pipeline.json  pipeline_model_driven.json  pipeline_native.json  pipeline_yaah_driven.json  tools.py
examples/coding-agent/fixtures/: input.json
examples/coding-agent/prompts/: coding_agent.md  coding_agent_native.md
examples/config-flow/: .gitignore  README.md  config-flow-ab.real.json  config-flow-pipeline-ab.json  config-flow-pipeline.json  config-flow.dogfood.json  config-flow.local.json  config-flow.real.json  transforms.py  visualize
examples/config-flow/fixtures/: input.json
examples/config-flow/prompts/: extract-strict.md  extract.md
examples/config-flow/templates/: report.html
examples/fork-join/: lenses.py  review.json  review.local.json
examples/fork-join/fixtures/: input.json
examples/hello-yaah/: README.md  hello_transforms.py  starter.json
examples/hello-yaah/prompts/: summarize.md
examples/hello-yaah/templates/: output.html
examples/review-pipeline/: .gitignore  review.json  review.local.json  review_transforms.py
examples/review-pipeline/fixtures/: input.json
examples/spike-harness/: README.md  local.json  pipeline.json  tools.py
examples/spike-harness/fixtures/: data.txt  input.json
examples/spike-harness/prompts/: agent.md
examples/tool-safety-gate/: README.md  safety-pipeline.json  safety.local.json  safety.real.json  transforms.py
examples/tool-safety-gate/fixtures/: input.json
examples/tool-safety-gate/prompts/: safety-check.md
schemas/: pipeline.schema.json  root.schema.json
scripts/: build_catalog.py  build_schemas.py  check_docs.py  render_pipeline_svg.py  review_my_pr.py  run_tests.py
src/yaah/: __init__.py  cli.py  completion.py  contract.py  cwd.py  dataflow.py  doctor.py  external_call.py  filter_factories.py  init_template.py  jsonio.py  jsonschema.py  manual.py  node_contract.py  overlay_lint.py  plugins.py  prefix_router.py  recall.py  runtime.py  runtime_factories.py  safepath.py  schema_gen.py  shell_completion.py  templating.py  validate.py  validators.py
src/yaah/adapters/: __init__.py
src/yaah/agents/: __init__.py  agent.py  api_provider.py  attacher.py  attaching_agent.py  context_broker_tool.py  envelope_tool.py  fake_backend.py  fake_provider.py  manifest.py  model_backend.py  routing_backend.py  routing_provider.py  scripted_backend.py  scripted_provider.py  scripted_tool_backend.py  scripted_tool_provider.py  tool.py  tool_loop.py
src/yaah/comms/: __init__.py  comms.py  in_process_comms.py  subscription.py
src/yaah/configs/: __init__.py
src/yaah/core/: __init__.py  envelope.py  failure.py  kind.py  node.py  node_config.py  verdict.py
src/yaah/data/: __init__.py  data_sink.py  data_source.py  routing_data_sink.py  routing_data_source.py
src/yaah/filters/: filter.py
src/yaah/harness/: __init__.py  baton.py  baton_store.py  (+13 more)
tests/: _live_helpers.py  _py39_driver.py  _sticky_helpers.py  fixtures_agent_loop_tools.py  test_adapters_external.py  test_adapters_subprocess.py  test_agent_clear.py  test_agent_contract.py  test_agent_loop.py  test_agent_output_schema.py  test_agent_tools.py  test_agents.py  test_api_provider.py  test_attach_builder.py  test_attacher.py  test_author_example.py  test_baton_preserve.py  test_baton_schema_cli.py  test_build.py  test_bus.py  test_ceilings.py  test_check_docs.py  test_cli.py  test_cli_validate_json.py  test_coding_agent_example.py  test_coding_agent_tools_security.py  test_completion.py  test_context_broker.py  test_contract.py  test_data.py  test_decision_forms.py  test_doctor.py  test_envelope.py  test_envelope_carriage.py  test_envelope_tool.py  test_error_handling.py  test_escalation_surface.py  test_explain.py  test_fake_overlay.py  test_features.py  (+60 more)
(+105 files in other folders)
