[project]
name = "yaah-harness"
version = "0.0.1"
description = "Yet Another Agentic Harness — generic worker-orchestration kernel"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Janne Karvosenoja"}]
requires-python = ">=3.9"
# The engine core has ZERO runtime dependencies — minimal CVE surface, trivial to
# vendor. Every third-party library is an OPT-IN adapter, lazily imported only
# when that adapter is used (LiteLLM backend / NATS transport / Langfuse sinks /
# HTTP prompt source). Versions are intentionally unpinned here: pin them in the
# environment + lock layer (see pixi.toml), not via a guess in this file.
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Janne-ka/yaah-harness"
Source = "https://github.com/Janne-ka/yaah-harness"

[project.optional-dependencies]
litellm = ["litellm"]      # LiteLLMBackend (provider:model via litellm)
nats = ["nats-py"]         # NatsComms transport (distributed, auth+TLS)
langfuse = ["langfuse>=4"]  # trace sink maps onto the v4 (OTEL) client surface;
                            # the legacy v2 surface is still handled if you pin <3
http = ["httpx"]           # HttpPromptSource default fetcher
all = ["litellm", "nats-py", "langfuse>=4", "httpx"]
dev = ["coverage[toml]", "mypy"]   # run_tests.py enforces the coverage floor; mypy is the contract gate

[project.scripts]
yaah = "yaah.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Ship the R14-seed base configs inside the wheel so `_extends: "yaah:bases/..."`
# resolves from an installed package, not just the source tree.
"yaah.configs.bases" = ["*.json"]
# Scaffold archetype templates ship as ACTUAL FILES under yaah/templates/
# (loaded by init_template.load_template via importlib.resources). Only
# yaah/templates itself is a Python package; the archetype subdirs are
# plain data directories (hyphens like `branch-with-gate` aren't valid
# Python module names, and the py39 import guard would trip on them).
# Setuptools accepts the wildcard entries below as package-data for the
# parent package and ships the subdirs intact.  Wildcards cover dotfiles
# (.gitignore) and nested dirs (prompts/, fixtures/).
"yaah.templates.linear" = ["*", ".*", "**/*"]
"yaah.templates.branch-with-gate" = ["*", ".*", "**/*"]
"yaah.templates.fork-fanin" = ["*", ".*", "**/*"]

[tool.coverage.run]
branch = true
source = ["yaah"]
parallel = true
# Measure the package as imported (PYTHONPATH=src), not the file paths.

[tool.coverage.paths]
# Treat the src/ layout and any installed copy as the same package.
source = ["src/yaah", "*/yaah"]

[tool.coverage.report]
show_missing = true
skip_covered = false
# The bar, now met (87% combined). Enforced as a ratchet: keep it here and raise
# it as coverage grows; do not let it slip below 75.
fail_under = 75
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",                 # Protocol method bodies (abstract `...`, never run)
]

[tool.mypy]
# Contract-enforcement gate for the explicit-contracts refactor: type-check the
# engine package so an impl that breaks a port Protocol is caught before runtime.
# Runs under PYTHONPATH=src (mypy_path). Default strictness for now; tighten as
# the per-subsystem declarations land and the error count reaches zero.
# python_version is 3.10 (the floor mypy 2.x supports); the engine's actual 3.9
# compatibility is validated by running the suite on 3.9, not by this gate.
python_version = "3.10"
mypy_path = "src"
packages = ["yaah"]

[[tool.mypy.overrides]]
# Optional adapters lazily import third-party libs not installed in the check
# env; their absence is expected, not a type error.
module = ["litellm.*", "langfuse.*", "nats.*", "httpx.*"]
ignore_missing_imports = true
